--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <p>Overall, PlayQuizEarn provides a fun and engaging way to earn small rewards by watching videos and using daily scratch cards.</p>
                     <p><strong>Latest Version:</strong> 2.3.1</p>
                     <p><strong>Total Downloads:</strong> <span id="download-count">0</span></p>
-                    <a href="https://gddf.com/download/app.apk" id="download-link" target="_blank">
+                    <a href="https://www.mediafire.com/file/8ijqnw37dipho4k/PlayQuizEarnApp.apk/file" id="download-link" target="_blank">
                         <button>Download APK</button>
                     </a>
                 </div>
