--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>APK Download Website</title>
+    <title>PlayQuizEarn App</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -48,7 +48,7 @@
             </div>
         </main>
         <footer>
-            <p>&copy; 2024 MyApp. All rights reserved.</p>
+            <p>&copy; 2024 PlayQuizEarnApp. All rights reserved.</p>
         </footer>
     </div>
     <script src="script.js"></script>
